# TestShop

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml
cart/: services.py  urls.py  views.py
cart/templatetags/: cart_extras.py
cart/tests/: test_services.py  test_views.py
functional_tests/: base.py  test_add_product_review.py  test_cart.py  test_concrete_product.py  test_home.py  test_orders.py  test_shop.py
orders/: admin.py  forms.py  models.py  services.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_auto_20211204_1519.py  0003_alter_receiver_phone.py
orders/tests/: test_form.py  test_models.py  test_services.py  test_views.py
products/: admin.py  models.py  services.py  urls.py  views.py
products/context_processors/: categories.py
products/migrations/: 0001_initial.py  0002_productimage.py  0003_alter_category_title.py  0004_auto_20211024_1409.py  0005_alter_product_options.py
products/tests/: test_models.py  test_services.py  test_views.py
reviews/: models.py  services.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_auto_20211024_1412.py  0003_alter_review_options.py
reviews/tests/: test_models.py  test_services.py  test_views.py
staticfiles/css/: base.css
templates/: 404.html  500.html  base.html
templates/account/: login.html  logout.html  signup.html
templates/cart/: all_products.html
templates/orders/: all_orders.html  concrete.html  create_order.html
templates/products/: concrete_product.html  home.html  (+1 more)
testshop/: settings.py  urls.py
