[tool.poetry]
name = "testshop"
version = "0.1.0"
description = "Testshop is my testing shop project"
authors = ["Artemowkin <artyom.groshev2017@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
psycopg2-binary = "^2.9.1"
selenium = "^4.0.0"
Pillow = "^8.4.0"
requests = "^2.26.0"
simplejson = "^3.17.5"
django-allauth = "^0.45.0"
whitenoise = "^5.3.0"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
